fixed footer spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,7 +348,7 @@
 
 .footer{
     position: absolute;
-    bottom: -10px;
+    bottom: -35px;
     width: 100%;
     height: 60px;
     line-height: 60px;
